--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,16 +30,16 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="icon" href="{{ "/images/FOLIO_fav.png" }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-  
+
   <script src="https://cdn.jsdelivr.net/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tocbot@4.2.0/dist/tocbot.min.js"></script>
   <script src="/assets/js/folio.js"></script>
-  
+
   <!-- Include google analytics for production build and if necessary -->
   {% if jekyll.environment == 'production' and site.google_analytics %}
 	{% include analytics.html %}
   {% endif %}
-  
+
   <!-- Include cookie consent for production build when enabled -->
   {% if jekyll.environment == 'production' %}
   	{% if site.data.setup.enable-cookies-policy %}
@@ -47,5 +47,5 @@
     {% endif %}
   {% endif %}
 
+  <link href="https://dev.folio.org/assets/projectwide-navbar/v0.0.1/projectwide-navbar.css" type="text/css" rel="stylesheet" />
 </head>
-
