--- a/assets/projectwide-navbar/v0.0.1/projectwide-navbar.css
+++ b/assets/projectwide-navbar/v0.0.1/projectwide-navbar.css
@@ -55,6 +55,7 @@
   transition:all .3s ease;
   transform:scaleY(1);
   color:#333;
+  z-index:1000000;
 }
 .projectwide-navbar-dropdown ul {
   visibility:hidden;
