--- a/_includes/banner-area.html
+++ b/_includes/banner-area.html
@@ -28,13 +28,14 @@ If changes are made to this file that increase the height of the banner-area tha
 	<div class="icon-container">
 		{% include banner-icon.html %}
 	</div>
+        <div class="folio-navbar-container">
+          {% include projectwide-navbar.html %}
+        </div>
 	<div class="title-area-container">
 		{% include banner-title-area.html %}
 	</div>
 	<div class="label-container"><label for="banner-menu-symbol"><p><!-- empty but necessary! --></p></label></div>
 	{%- comment -%}<!-- This is part of the DOM again (unless the banner area is outside the DOM) -->{%- endcomment %}
-	<!-- Include FOLIO top-level navigation bar -->
-	{%- include folio-navbar.html -%}
 	<div class="menubar-top-separator"></div>
 	{% include menubar.html %}
 	<div class="menubar-bottom-separator"></div>
