--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -1,3 +1,14 @@
+// start folio-navbar
+.folio-navbar-container {
+  // Sizing: This is an overlay container over the entire banner
+  @extend .overlay;
+  @include narrow-layout { height: $banner-height-narrow; }
+  @include medium-layout { height: $banner-height-medium; }
+  @include widest-layout { height: $banner-height-widest; }
+  display: flex;
+  background-color: yellow;
+}
+// end folio-navbar
 div.highlight {
   border: 1px solid $f-color-light-grey;
 }
