Enable projectwide-navbar full width

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -6,7 +6,9 @@
   @include medium-layout { height: $banner-height-medium; }
   @include widest-layout { height: $banner-height-widest; }
   display: flex;
-  background-color: yellow;
+}
+nav.projectwide-navbar {
+  width: 100%;
 }
 // end folio-navbar
 div.highlight {
