Now use id for projectwide-navbar

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -7,7 +7,7 @@
   @include widest-layout { height: $banner-height-widest; }
   display: flex;
 }
-nav.projectwide-navbar {
+#projectwide-navbar {
   width: 100%;
 }
 // end folio-navbar
