Lower projectwide-navbar z-index in "narrow" width
To enable the dev navbar menu-disclosure toggle
to show in the banner.

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -2,7 +2,12 @@
 .folio-navbar-container {
   // Sizing: This is an overlay container over the entire banner
   @extend .overlay;
-  @include narrow-layout { height: $banner-height-narrow; }
+  @include narrow-layout {
+    height: $banner-height-narrow;
+    #projectwide-navbar {
+      z-index: 0;
+    }
+  }
   @include medium-layout { height: $banner-height-medium; }
   @include widest-layout { height: $banner-height-widest; }
   display: flex;
