Add some new folio colors

--- a/_sass/_folio-base.scss
+++ b/_sass/_folio-base.scss
@@ -8,3 +8,6 @@ $f-color-light-grey: #737272;
 $f-color-lighter-grey: lighten($f-color-light-grey, 50%);
 $f-color-attention: #ff0000;
 $f-link-color: #2a7ae2; // from minima
+
+$f-color-blue-light: #4c7ea5;
+$f-color-white: #f8f8f8;
