Apply flex to narrow-layout
And reduce width so that banner-menu-symbol
shows through from the other banner overlays.

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -1,17 +1,16 @@
-// start folio-navbar
+// start projectwide-navbar
 .folio-navbar-container {
   // Sizing: This is an overlay container over the entire banner
   @extend .overlay;
   @include narrow-layout {
     height: $banner-height-narrow;
-    #projectwide-navbar {
-      z-index: 0;
-    }
+    width: 90%;
+    display: flex;
   }
   @include medium-layout { height: $banner-height-medium; }
   @include widest-layout { height: $banner-height-widest; }
 }
-// end folio-navbar
+// end projectwide-navbar
 div.highlight {
   border: 1px solid $f-color-light-grey;
 }
