Increase banner-height-narrow, and color blue

--- a/_sass/classic-jekyll-theme.scss
+++ b/_sass/classic-jekyll-theme.scss
@@ -89,7 +89,7 @@ $add-to-banner-area-height-widest:		0px;
 //
 // Note: This prevents an anchored link from scrolling to a position behind the banner-area.
 //
-$anchor-top-fixed-offset-narrow:		52px;
+$anchor-top-fixed-offset-narrow:		102px;
 $anchor-top-fixed-offset-medium:		90px;
 $anchor-top-fixed-offset-widest:		90px;
 
@@ -108,14 +108,14 @@ $banner-enabled-widest:					true;
 // Always set a fixed value ('auto' and percentages don't work)
 // CSS property: Height
 //
-$banner-height-narrow:					52px;
+$banner-height-narrow:					102px;
 $banner-height-medium:					52px;
 $banner-height-widest:					52px;
 
 // The background of the banner. (Not the banner-area!)
 // CSS property: Background.
 //
-$banner-background-narrow:				$f-color-orange;
+$banner-background-narrow:				$f-color-blue-light;
 $banner-background-medium:				$f-color-orange;
 $banner-background-widest:				$f-color-orange;
 
