Also h4 for ToC
and break the Glossary into sections, as the table-of-contents was becoming unwieldy.

--- a/_includes/js-content.html
+++ b/_includes/js-content.html
@@ -1,6 +1,6 @@
 <script>
   tocbot.init({
-    headingSelector: 'h1, h2, h3',
+    headingSelector: 'h1, h2, h3, h4',
     positionFixedSelector: '#js-toc-wrapper'
   });
 $(function() {
