Reduce spacing above tocbot js-toc-wrapper
Not needed now removed top-fixed banner.

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -123,6 +123,7 @@ nav.folio {
 /* tocbot */
 #js-toc-wrapper {
   background-color: $f-color-lighter-grey;
+  margin-top: 1em;
 }
 li.toc-list-item {
   width: 210px;
