--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -55,6 +55,9 @@ th {
 }
 table.api {
   table-layout: fixed;
+  width: 20em;
+}
+table.apilabel {
   width: 35em;
 }
 table.api .label {
@@ -65,6 +68,7 @@ table.api .raml {
 }
 table.api .view {
   width: 11%;
+  text-align: center;
 }
 
 /*
