Enable building of docs for shared repos FOLIO-903
But the link for the raml file needs to point to master of shared "raml" repo.
Later might be able to link to actual sha1.

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -62,9 +62,11 @@ table.apilabel {
 }
 table.api .label {
   width: 44%;
+  text-align: left;
 }
 table.api .raml {
   width: 35%;
+  text-align: left;
 }
 table.api .view {
   width: 11%;
