Upgrade jQuery to v3.3.1
Was v3.2.1

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
   <link rel="icon" href="{{ "/images/FOLIO_fav.png" }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
-  <script src="https://cdn.jsdelivr.net/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tocbot@4.4.0/dist/tocbot.min.js"></script>
   <script src="/assets/js/folio.js"></script>
 
