Provide other searches Wiki

--- a/_includes/column-2-search.html
+++ b/_includes/column-2-search.html
@@ -9,5 +9,11 @@
   <p>
     Using its prefix-based search.
     So term "cat" is indexed as "c", "ca", and "cat".
+  </p>
+  <p>
+    This search is constrained to dev.folio.org only.
+    See <a href="/search-other/">other search facilities</a>
+    for GitHub, FOLIO Wiki, etc.
+  </p>
 </div>
 <!-- end of include tertiary-column.html -->
