Enable content spacer
If final content section of document is too small,
then need extra space to enable ToC to reach it.

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -168,6 +168,9 @@ h1, h2, h3, h4 {
 #folio-spacer {
   padding-bottom: 50em;
 }
+.folio-spacer-content {
+  padding-bottom: 6em;
+}
 
 /* for Tutorials */
 .vagrant-note {
