Do not render superfluous datePublished  FOLIO-3098
It will always be today

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -117,6 +117,9 @@ form input {
 .menubar-icon {
   display: none;
 }
+.page-meta {
+  display: none;
+}
 nav.folio {
   background-color: $f-color-orange;
   div.item {
