Explain search remote FOLIO-3311

--- a/_includes/column-2-search.html
+++ b/_includes/column-2-search.html
@@ -15,5 +15,9 @@
     See <a href="/search-other/">other search facilities</a>
     for GitHub, FOLIO Wiki, etc.
   </p>
+  <p>
+    A specific set of important <a href="/faqs/where-is-developer-documentation-located/">other</a> documents are also indexed.
+    The search results will show these prepended with "Remote &gt;&gt;".
+  </p>
 </div>
 <!-- end of include tertiary-column.html -->
