Enable table sort FOLIO-1316
Thanks to https://github.com/tofsjonas/sortable

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -81,6 +81,9 @@ table.apilabel .raml {
   width: 50%;
   text-align: left;
 }
+table.sortable th.no-sort {
+  pointer-events: none;
+}
 
 /*
 :target {
