--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -81,8 +81,28 @@ table.apilabel .raml {
   width: 50%;
   text-align: left;
 }
+// 2022-09-18 https://github.com/tofsjonas/sortable/blob/main/sortable.css
 table.sortable th.no-sort {
   pointer-events: none;
+}
+.sortable th::after {
+  font-size: 1.2em;
+  color: transparent;
+  content: ' \025B8';
+}
+.sortable th.dir-d {
+  color: #000;
+}
+.sortable th.dir-d::after {
+  color: inherit;
+  content: ' \025BE';
+}
+.sortable th.dir-u {
+  color: #000;
+}
+.sortable th.dir-u::after {
+  color: inherit;
+  content: ' \025B4';
 }
 
 /*
